successful error handling / all cities have activities / .env.sample updated